# brain

./: .env.example  .gitignore  CODEX.md  README.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.base.json
apps/api/: package.json
apps/api/src/: normalise.ts  server.ts
apps/edge-controller/: package.json
apps/edge-controller/src/: index.ts
apps/web/: index.html  package.json
apps/web/src/: main.tsx
examples/: curl-examples.sh
extension/: background.js  content-script.js  manifest.json  popup.html  popup.js  styles.css
scripts/: init.sql
src/proof_of_thought/: __init__.py  api.py  config.py  crypto.py  models.py  service.py  storage.py
tests/: test_service.py
wp-chatgpt-utm-cleaner/: wp-chatgpt-utm-cleaner.php
