[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-of-thought"
version = "0.1.0"
description = "Seal and verify ideas using deterministic hashing and placeholder proofs."
readme = "CODEX.md"
requires-python = ">=3.10"
authors = [{ name = "Proof of Thought" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.25",
    "pydantic>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [
    "src",
]
